# project-test

./: .gitignore  CMakeLists.txt  README.md
Unix/CMake-test/my_dynamic_lib/: CMakeLists.txt
Unix/CMake-test/my_dynamic_lib/include/my_dynamic_lib/: printer.h
Unix/CMake-test/my_static_lib/: CMakeLists.txt
Unix/CMake-test/my_static_lib/include/my_static_lib/: printer.h
Unix/CMake-test/my_static_lib/src/: printer.cpp
Unix/CMake-test/src/: printer.cpp
Unix/gcc-test/: README.md  run_allLibs.sh  run_noLib.sh  run_staticLib.sh
Unix/gcc-test/src/: main.cpp  printer.cpp
cmake-test/include/cmake-test/: printer.h
cmake-test/my_dynamic_lib/src/: printer.cpp
my_dynamic_lib/: CMakeLists.txt
my_static_lib/: CMakeLists.txt
src/: main.cpp
